[package]
name = "solana-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
scc = { version = "2.3.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
solana-client = "2.2.4"
solana-sdk = "2.2.1"
thiserror = "2.0.12"
