[package]
name = "solana-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
scc = { version = "2.3.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
solana-client = "2.2.4"
solana-sdk = "2.2.1"
thiserror = "2.0.12"
async-trait = "0.1.88"
clap = { version = "4.4.0", features = ["derive"] }
tokio-retry = "0.3.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[dev-dependencies]
mockall = "0.13.0"
